クラス構成修正